# 3-arts

./: .gitmodules  arts-14.1.3.spec  arts.spec  import.info
.gear/: rules
altlinux/: cmake-libltdl.patch
tde-arts/: .tdescminfo  COPYING.LIB  ConfigureChecks.cmake  INSTALL  arts.pc.cmake
tde-arts/admin/: Doxyfile.global  acinclude.m4.in  am_edit  config.guess  config.sub  ltmain.sh
tde-arts/artsc/: artsc-config.in  artsc.h  artsc.pc.in
tde-arts/doc/man/: artsc-config-trinity.1  artscat-trinity.1
tde-arts/examples/: artscmt.c  artscrec.c  flow.cpp  hellodynamic.cpp  hellodynamic2.cpp  playtofile.idl  playtofile_main.cpp  testaggregation.cpp
tde-arts/flow/: audioio.h  audioiocsl.cpp  audioiojack.cpp  audioiomas.cpp  audioionas.cpp  audioiooss.cpp  audiosubsys.h  bus.h  bytestreamtoaudio_impl.cpp  cache.h  cachedwav.h  cpuinfo.h  datahandle_impl.cpp  gslschedule.cpp  stdsynthmodule.h  stereoeffectstack_impl.cpp  synth_mul_impl.cpp  synthschedule.h  virtualports.cpp
tde-arts/flow/gsl/: gsl-fftconf.sh  gslartsthreads.cpp  gslartsthreads.h  gslcommon.h  gsldatacache.c  gsldatacache.h  gsldatahandle-mad.c  gsldatahandle-mad.h  gsldatahandle-vorbis.h  gsldatahandle.c  gsldatahandle.h  gsldefs.h  gslengine.c  gslengine.h  gslfft.c  gslfft.h  gslfilehash.h  gslfilter.c  gslfilter.h  gslglib.c  gslglib.h  gslglibhash.cpp  gslglibhashtest.cpp  gslloader-wav.c  (+22 more)
tde-arts/gmcop/: giomanager.cpp  giomanager.h
tde-arts/libltdl/: README  ltdl.c  ltdl_win.c
tde-arts/mcop/: CMakeLists.txt  asyncstream.h  buffer.cpp  common.h  connect.cpp  core.idl  delayedreturn.cpp  dynamicrequest.h  dynamicskeleton.h  extensionloader.cpp  factory.cpp  ifacerepo_impl.h  mcoputils.h  md5.h  md5auth.h  notification.cpp  notification.h  object.cpp  pool.h  reference.h  referenceclean.cpp  socketconnection.cpp  tcpconnection.cpp  tcpconnection.h  tcpserver.cpp  thread.h  type.h  unixconnection.h
tde-arts/mcop_mt/: CMakeLists.txt  threads_posix.cpp
tde-arts/mcopidl/: mcopidl.cpp  scanner.cpp  scanner.ll  yacc.cpp.h  yacc.yy
tde-arts/qtmcop/: CMakeLists.txt  qiomanager.h  qiomanager_p.h
tde-arts/soundserver/: CMakeLists.txt  artsplay.cpp  artsshell.cpp  artsversion-new.h.in  crashhandler.cpp  crashhandler.h  fileinputstream_impl.cpp  gslplayobject_impl.cpp  soundserverstartup_impl.cpp  soundserverstartup_impl.h  stdoutwriter_impl.cpp  wavplayobject_impl.cpp
tde-arts/tests/: README.test  test.h  testchangenotify.cpp  testflowsystem.cpp  testnotification.cpp
trinity-arts/: .tdescmmodule  .tdescmrevision  CMakeLists.txt  COPYING  README.md  TODO  arts.lsm  config.h.cmake
trinity-arts/admin/: acinclude.m4.in
trinity-arts/artsc/: CMakeLists.txt  artsc.c  artsc_export.h.in  artscbackend.cc  artsdsp.c  stdioemu.c
trinity-arts/doc/: NEWS  README  TODO
trinity-arts/examples/: aggregation.idl  artsccat.c  artsctest.c  catfile.cpp  dcasttest.cpp  flow.cc  hello.idl  hello_impl.cpp  hello_impl.h  helloclient.cpp  hellomain.cpp  helloserver.cpp  irdemo.cpp  playtofile_impl.cpp  playtofile_main.cc  referenceinfo.cpp  streamsound.cpp  testasubsys.cc  testdhandle.cc  testthreads.cc  x11commtest.cpp
trinity-arts/flow/: CMakeLists.txt  asyncschedule.cc  asyncschedule.h  audioio.cpp  audioioaix.cpp  audioioalsa.cc  audioioalsa.cpp  audioioalsa9.cc  audioioesd.cpp  audioiojack.cc  audioiolibaudioio.cc  audioionull.cpp  audioioossthreaded.cpp  audioiosgi.cc  audioiosndio.cpp  audioiosun.cc  audioiosun.cpp  audiomanager_impl.cc  audiomanager_impl.cpp  audiosubsys.cpp  audiotobytestream_impl.cpp  bus.cpp  cache.cc  convert.cpp  convert.h  cpuinfo.cc  fft.h  gslschedule.h  pipebuffer.cc  pipebuffer.h  resample.cpp  resample.h  stdsynthmodule.cc  stereofftscope_impl.cpp  stereovolumecontrol_impl.cc  stereovolumecontrol_impl.cpp  synth_add_impl.cc  synth_frequency_impl.cpp  synth_multi_add_impl.cc  synth_play_impl.cc  (+6 more)
trinity-arts/flow/gsl/: CMakeLists.txt  ConfigureChecks.cmake  gsl-fftgen.pl  gslartsthreads.cc  gslartsthreads.h  gslcommon.c  gslconvert.c  gslconvert.h  gsldatacache.c  gsldatahandle-mad.c  gsldatahandle-vorbis.c  gsldatautils.c  gsldatautils.h  gsldefs.h  gslengine.c  gslfft.h  gslffttest.c  gslfilehash.c  gslfilter.c  gslfilter.h  gslglib.c  gslglib.h  gslglibhash.cc  gslieee754.h  gslloader-gslwave.c  gslloader-mad.c  gslmagic.c  gslmath.h  gslopmaster.c  gslopschedule.h  gsloputil.c  gslosctable.c  gslsignal.h  gsltests.c  gslwavechunk.c  gslwavechunk.h  gslwaveosc-aux.c  gslwaveosc.c
trinity-arts/flow/gslpp/: datahandle.cpp  datahandle.h
trinity-arts/gmcop/: CMakeLists.txt
trinity-arts/libltdl/: ltdl.c  ltdl_win.c
trinity-arts/mcop/: CMakeLists.txt  anyref.cc  anyref.h  arts_export.h.in  asyncstream.cpp  buffer.cc  buffer.h  connect.h  connection.cpp  connection.h  datapacket.cc  datapacket.h  debug.cc  debug.cpp  debug.h  delayedreturn.h  dispatcher.cc  dispatcher.cpp  dispatcher.h  dynamicrequest.cpp  dynamicskeleton.cc  extensionloader.h  factory.h  flowsystem.cpp  flowsystem.h  idlfilereg.cpp  idlfilereg.h  ifacerepo_impl.cc  iomanager.cc  iomanager.cpp  iomanager.h  loopback.cc  loopback.h  mcopconfig.cpp  mcopconfig.h  mcoputils.cc  md5.c  md5auth.cc  namedstore.h  object.h  (+18 more)
trinity-arts/mcop_mt/: CMakeLists.txt  threads_posix.cc
trinity-arts/mcopidl/: CMakeLists.txt  mcopidl.cc  namespace.cpp  namespace.h  scanner.cc  scanner.ll  yacc.cc  yacc.cpp
trinity-arts/qtmcop/: CMakeLists.txt  qiomanager.cc  qiomanager.cpp  qiomanager_p.h
trinity-arts/soundserver/: CMakeLists.txt  artscat.cpp  artsd.cc  artsd.cpp  artsrec.cpp  artsshell.cc  cpuusage.cc  cpuusage.h  gslplayobject_impl.cc  samplestorage_impl.cpp  simplesoundserver_impl.cc  simplesoundserver_impl.h  soundserver_impl.cc  soundserver_impl.cpp  soundserver_impl.h  soundserverstartup_impl.cc  soundserverv2_impl.cc  soundserverv2_impl.cpp  soundserverv2_impl.h  tradercheck.cpp  tradercheck.h  wavplayobject_impl.cc
trinity-arts/tests/: testanyref.cpp  testbuffer.cc  testdispatcher.cpp  testifacerepo.cc  testremote.cpp  testwrapper.cpp  value_impl.cpp
trinity-arts/x11/: x11globalcomm.idl  x11globalcomm_impl.cpp
(+2 files in other folders)
